# multimodal-ai-prod

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: config.example.yaml  config.yaml
data/outputs/: document_20260318_200143.docx  document_20260318_200208.docx  test_doc.docx
data/processed/: general_alignment.jsonl
scripts/: download_model.py  setup.ps1  setup.sh
src/: __init__.py
src/agent/: memory.py  orchestrator.py  skills.py  tools.py  tools_extended.py
src/api/: server.py
src/data/: multimodal_dataset.py  prepare_dataset.py
src/evaluation/: evaluator.py  metrics.py
src/inference/: engine.py
src/model/: loader.py
src/rag/: document_parser.py  engine.py
src/training/: rewards.py  train.py
src/utils/: config.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunker.py  test_config.py  test_evaluation.py  test_multimodal_dataset.py  test_rag_components.py  test_rewards.py  test_skills.py  test_tools_extended.py
